# icarus_rover_v2

./: .gitignore  ActiveScenario  CMakeLists.txt  CMakeLists.txt.orig  Doxyfile  README.md  branch_notes.txt  branch_notes.txt.BACKUP.17226.txt  branch_notes.txt.LOCAL.17226.txt  branch_notes.txt.orig  package.xml  package.xml.orig
simulation/: CMakeLists.txt  simscout.world
simulation/src/simscout/: simscout.cc
src/Board/: BoardControllerNodeProcess.cpp  BoardControllerNodeProcess.h  CMakeLists.txt  HatControllerNodeProcess.cpp  HatControllerNodeProcess.h  README.md  ServoHatDriver.cpp  ServoHatDriver.h  batterymonitor_node.cpp  batterymonitor_node.h  boardcontroller_node.cpp  boardcontroller_node.cpp.orig  boardcontroller_node.h  boardcontroller_node_process.cpp  boardcontroller_node_process.h  gpio_node.cpp  gpio_node.h  gpio_node_process.cpp  gpio_node_process.h  hatcontroller_node.cpp  hatcontroller_node.h  hatcontroller_node_process.cpp  hatcontroller_node_process.h  pigpiotest
src/Board/Driver/: GPIOHatDriver.cpp  GPIOHatDriver.h  ServoHatDriver.cpp  ServoHatDriver.h  TerminalHatDriver.cpp  TerminalHatDriver.h  test_terminalhat.cpp
src/Board/backup/: boardcontroller_node.h  gpio_node.cpp  gpio_node.h
src/Board/sample_launch/: boardcontroller_node.launch
src/Board/unit_tests/: Definitions.h  eROS_Definitions.h  spimessage.cpp  spimessage.h  test_arduinoboard  test_arduinoboard.cpp  test_arduinoboard_bk.cpp  test_boardcontroller_node_process.cpp  test_gpiohat.cpp  test_hatcontroller_node_process.cpp  test_serialcomm  test_serialcomm.cpp  test_servohat  test_servohat.cpp  test_spicomm  test_spicomm.cpp  test_terminalhat.cpp
src/Communication/: CMakeLists.txt  DatabaseNodeProcess.cpp  DatabaseNodeProcess.h  NetworkTransceiverNodeProcess.cpp  NetworkTransceiverNodeProcess.h  README.md  SpeakerNodeProcess.cpp  SpeakerNodeProcess.h  TopicRemapperNodeProcess.cpp  TopicRemapperNodeProcess.h  database_node.cpp  database_node.h  network_transceiver_node.cpp  network_transceiver_node.h  network_transceiver_node_process.cpp  network_transceiver_node_process.h  networktransceiver_node.cpp  networktransceiver_node.h  networktransceiver_node_process.cpp  networktransceiver_node_process.h  speaker_node.cpp  speaker_node.h  speaker_node_process.cpp  speaker_node_process.h  topicremapper_node.cpp  topicremapper_node.h  topicremapper_node_process.cpp  topicremapper_node_process.h
src/Communication/Message Generation/: message.xml  message_12Aug2016.xml  message_15Aug2016.xml  message_1Aug2016.xml  message_generator (copy).py  message_generator.py
src/Communication/backup/: topicmapper_node.cpp  topicmapper_node.h
src/Communication/sample_launch/: network_transceiver_node.launch  topicremapper_node.launch
src/Communication/unit_tests/: UnitTestTopicMap.xml  test_database_node_process.cpp  test_networktransceiver_node_process.cpp  test_spicomm.cpp  (+2 more)
src/Control/: .~lock.ArcadeTankMixing.ods#  ArcadeTankMixing.ods  CMakeLists.txt  CommandLauncherNodeProcess.cpp  CommandLauncherNodeProcess.h  CommandNodeProcess.cpp  CommandNodeProcess.h  ControlGroupNodeProcess.cpp  ControlGroupNodeProcess.h  ImplementNodeProcess.cpp  ImplementNodeProcess.h  MasterNodeProcess.cpp  MasterNodeProcess.h  NavigationNodeProcess.cpp  NavigationNodeProcess.h  README.md  ValueScaling.ods  armcontroller_node.cpp  armcontroller_node.h  autodrive_node.cpp  autodrive_node.h  autodrive_node_process.cpp  autodrive_node_process.h  command_node.cpp  command_node.cpp.orig  command_node.h  command_node_process.cpp  command_node_process.h  commandlauncher_node.cpp  commandlauncher_node.cpp.orig  commandlauncher_node.h  commandlauncher_node.h.orig  commandlauncher_node_process.cpp  commandlauncher_node_process.cpp.orig  commandlauncher_node_process.h  commandlauncher_node_process.h.orig  controlgroup_node.cpp  controlgroup_node.h  implement_node.cpp  implement_node.h  (+17 more)
src/Diagnostics/: CMakeLists.txt  DataLoggerNodeProcess.cpp  DataLoggerNodeProcess.h  DiagnosticNodeProcess.cpp  DiagnosticNodeProcess.h  README.md  SafetyNodeProcess.cpp  SafetyNodeProcess.h  SnapshotNodeProcess.cpp  SnapshotNodeProcess.h  datalogger_node.cpp  datalogger_node.h  diagnostic_node.cpp  diagnostic_node.h  diagnostic_node_process.cpp  diagnostic_node_process.h  lcdmodule_node.cpp  lcdmodule_node.h  safety_node.cpp  safety_node.h  safety_node_process.cpp  safety_node_process.h  snapshot_node.cpp  snapshot_node.h
src/Pose/: CMakeLists.txt  CMakeLists.txt.orig  CalibrationNodeProcess.cpp  CalibrationNodeProcess.h  IMUNodeProcess.cpp  IMUNodeProcess.h  PoseDefinitions.h  PoseNodeProcess.cpp  PoseNodeProcess.h  README.md  calibration_node.cpp  calibration_node.h  imu_node.cpp  imu_node.h  imu_node_process.cpp  imu_node_process.h  pose_node.cpp  pose_node.h  pose_node_process.cpp  pose_node_process.h  tf_broadcaster_node.cpp  truth_node.cpp  truth_node_process.cpp  truth_node_process.h
src/Sensor/: CMakeLists.txt  IMUNodeProcess.cpp  IMUNodeProcess.h  README.md  imu_node.cpp  imu_node.h
src/Timing/: CMakeLists.txt  README.md  TimeMasterNodeProcess.cpp  TimeMasterNodeProcess.h  TimeSlaveNodeProcess.cpp  TimeSlaveNodeProcess.h  time_master.cpp  time_master.cpp~HEAD  time_slave.cpp  timemaster_node.cpp  timemaster_node.h  timemaster_node_process.cpp  timemaster_node_process.h  timeslave_node.cpp  timeslave_node.h
src/User_Control/: AudioNodeProcess.cpp  AudioNodeProcess.h  CMakeLists.txt  README.md  audio_node.cpp  audio_node.h  audio_node_bk.cpp  audio_node_bk.h  audio_node_process.cpp  audio_node_process.h  teleop_node.cpp  teleop_node.h  usercontrol_node.cpp  usercontrol_node.cpp~HEAD  usercontrol_node.cpp~origin_joy_user
src_templates/: CMakeLists.txt  README.md  SampleNodeProcess.cpp  SampleNodeProcess.h  sample_node.cpp  sample_node.h  sample_node.launch  sample_node_process.cpp  sample_node_process.h
src_templates/Driver/: SampleDriver.cpp  SampleDriver.h
src_templates/bk/: sample_node_process.cpp
src_templates/sample_launch/: sample_node.launch
src_templates/unit_tests/: SampleConfig.xml  test_sample_node_process.cpp
(+2325 files in other folders)
